- Added reward functions and redemption